--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.31MB/s(Youtube:不良林), server: 192.210.206.50, port: 11188, type: vmess, uuid: de0ff7f6-370e-41c9-c24a-b932c7c1ad58, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 192.210.206.50}}
-  - {name: 🇮🇳 印度-1.82MB/s(Youtube:不良林), server: 140.238.255.240, port: 443, type: vmess, uuid: aaf9f463-876e-4bfd-ed11-1c07ad830092, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 140.238.255.240}}
-  - {name: 🇫🇷 法国-1.52MB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-8.47MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.61MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇩🇪 德国-2.49MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2, server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇫🇷 法国-1.81MB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇬🇧 英国-1.35MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-2.97MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇩🇪 德国-2.67MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: 129.159.41.233, port: 32586, type: vmess, uuid: 341a9182-c423-499c-c46e-d17838b29037, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.70MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-2.78MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-2.07MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林) 2, server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-4.49MB/s(Youtube:不良林), server: 64.112.43.180, port: 13674, type: vmess, uuid: f44ce146-2d6d-4e84-dcac-3bdd8689d053, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
