--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: 38.68.134.191, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇯🇵 日本-1.17MB/s(Youtube:不良林), server: 185.172.113.102, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇴 罗马尼亚-3.94MB/s(Youtube:不良林), server: 5.183.102.34, port: 37667, type: vmess, uuid: 66f93c8f-4458-41d3-e447-f0b57d893527, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.82MB/s(Youtube:不良林), server: 140.238.255.240, port: 443, type: vmess, uuid: aaf9f463-876e-4bfd-ed11-1c07ad830092, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 140.238.255.240}}
-  - {name: 🇫🇷 法国-166.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.05MB/s(Youtube:不良林), server: 38.68.134.191, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: 38.68.134.191, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: 38.68.134.191, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-2.78MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-2.07MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-3.07MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-4.49MB/s(Youtube:不良林), server: 64.112.43.180, port: 13674, type: vmess, uuid: f44ce146-2d6d-4e84-dcac-3bdd8689d053, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.94MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-166.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.94MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-166.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.94MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-166.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.94MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-166.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.94MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-166.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.94MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-166.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.94MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-166.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
 rules:
