--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.05MB/s(Youtube:不良林), server: 38.68.134.191, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: 38.68.134.191, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: 38.68.134.191, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-1.77MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.66MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 172.99.188.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇦 加拿大-745.5KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-3.07MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-3.22MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-4.49MB/s(Youtube:不良林), server: 64.112.43.180, port: 13674, type: vmess, uuid: f44ce146-2d6d-4e84-dcac-3bdd8689d053, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
